tests/golden/parse_errors/call_missing_argument.err
Parse error at 1:14: expected expression
  print add(1, );
               ^
